overflow fix

--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,7 @@
   user-select: none;
   font-size: 16px;
   height: 100%;
+  overflow: hidden;
   width: 100%;
 }
 
@@ -42,7 +43,7 @@ body {
 }
 
 .section p {
-
+  min-width: max-content;
   text-transform: uppercase;
   cursor: pointer;
   font-size: 1.4em;
